# quickgui

./: .gitmodules  CMakeLists.txt
ext/: ffmpeg.cmake  flatbuffers.cmake  imgui.cmake  opencv.cmake  sdl.cmake
ext/imguifilesystem/: README.md  dirent_portable.h  imguifilesystem.cpp
ext/imguispinner/: imgui_spinner.cpp  imgui_spinner.h
sample/: CMakeLists.txt
sample/hello_remote/: CMakeLists.txt  client.hpp  client_main.cpp  main.cpp  schema.fbs  server_main.cpp
sample/hello_video/: main.cpp  sample_video_player.hpp  sample_video_reader.hpp  video_overlay_canvas.cpp  video_overlay_canvas.hpp  video_player_console.hpp  video_player_gui.hpp  video_reader.hpp
sample/hello_world/: CMakeLists.txt  main.cpp
src/quickgui/: color.hpp  debug_draw_list.hpp  debug_draw_list_multithread.hpp  gui.cpp  gui.hpp  imgui.hpp  imgui_impl_sdl.cpp  imgui_impl_sdl.h  imgui_impl_sdl2.cpp  imgui_impl_sdl2.h  imgui_impl_sdl3.cpp  imgui_impl_vulkan.cpp  imgui_impl_vulkan.h  imgview.cpp  imgview.hpp  imgview_fwd.hpp  log.cpp  log.hpp  math.hpp  mem.hpp  overlay_canvas.cpp  overlay_canvas.hpp  palettes.hpp  primitive_draw_list.hpp  primitive_draw_list_multithread.hpp  rhi.cpp  rhi.hpp  sdl.hpp  static_vector.hpp  stb_image_data.cpp  stb_image_data.hpp  string.hpp  time.cpp  time.hpp  widgets.cpp  widgets.hpp  yuv.hpp
src/quickgui/cvutil/: cvutil.cpp  cvutil.hpp
src/quickgui/video/: video_frame.hpp  video_reader.cpp  video_reader.hpp  video_source.hpp
test/: CMakeLists.txt  test_irange.cpp  test_main.cpp
